logs/decor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/cryio'...
Compiling './lib/python3.5/site-packages/cryio/__init__.py'...
***   File "./lib/python3.5/site-packages/cryio/__init__.py", line 38
    raise ImageError(f'CryIO could not recognize the image {filename}')
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/brukerimage.py'...
***   File "./lib/python3.5/site-packages/cryio/brukerimage.py", line 45
    raise BrukerImage(f'Bruker file {self.filepath} cannot be read')
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/cbfimage.py'...
***   File "./lib/python3.5/site-packages/cryio/cbfimage.py", line 25
    return f'{s} ({values[-2]} = {values[-1]})'
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/cryioimage.py'...
***   File "./lib/python3.5/site-packages/cryio/cryioimage.py", line 42
    raise CryioError(f'Object {other} is not recognized')
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/crysalis.py'...
***   File "./lib/python3.5/site-packages/cryio/crysalis.py", line 85
    with open(f'{name}_selexpinfo_1_{num}.sel_od', 'wb') as f:
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/fit2dmask.py'...
***   File "./lib/python3.5/site-packages/cryio/fit2dmask.py", line 37
    raise NotFit2dMask(f'Not a fit2d mask file {self.filepath}')
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/numpymask.py'...
***   File "./lib/python3.5/site-packages/cryio/numpymask.py", line 24
    raise NotNumpyMask(f'File "{self.filepath}" does not contain a numpy mask array')
                                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryio/parparser.py'...
***   File "./lib/python3.5/site-packages/cryio/parparser.py", line 222
    return '\n'.join(f'{n} = {v}' for n, v in inspect.getmembers(self) if not n.startswith('_'))
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryio/templates'...
Compiling './lib/python3.5/site-packages/cryio/templates/__init__.py'...
***   File "./lib/python3.5/site-packages/cryio/templates/__init__.py", line 41
    raise KeyError(f'There is no template with name {name}')
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryio-2017.12.24.egg-info'...
Listing './lib/python3.5/site-packages/decor'...
Listing './lib/python3.5/site-packages/decor-2017.12.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
